--- a/renderer/renderer.vcxproj
+++ b/renderer/renderer.vcxproj
@@ -207,14 +207,18 @@
     <ClCompile Include="Exception\DxgiInfo.cpp" />
     <ClCompile Include="Exception\Exception.cpp" />
     <ClCompile Include="Geometry\Aabb.cpp" />
+    <ClCompile Include="Geometry\BezierPath.cpp" />
+    <ClCompile Include="Geometry\BezierSpline.cpp" />
     <ClCompile Include="Geometry\Circle.cpp" />
     <ClCompile Include="Geometry\Frustum.cpp" />
     <ClCompile Include="Geometry\Line.cpp" />
     <ClCompile Include="Geometry\LineSegment.cpp" />
     <ClCompile Include="Geometry\Plane.cpp" />
+    <ClCompile Include="Geometry\Polygon.cpp" />
     <ClCompile Include="Geometry\Rect.cpp" />
     <ClCompile Include="Geometry\Sector.cpp" />
     <ClCompile Include="Geometry\Triangle.cpp" />
+    <ClCompile Include="Geometry\Triangle2D.cpp" />
     <ClCompile Include="Input\Input.cpp" />
     <ClCompile Include="Input\Keyboard.cpp" />
     <ClCompile Include="Input\Mouse.cpp" />
@@ -293,6 +297,7 @@
     <ClCompile Include="Render\LightManager.cpp" />
     <ClCompile Include="Render\Material.cpp" />
     <ClCompile Include="Render\MaterialProperty.cpp" />
+    <ClCompile Include="Render\Mesh\BezierMesh.cpp" />
     <ClCompile Include="Render\Mesh\Geometry.cpp" />
     <ClCompile Include="Render\Mesh\Mesh.cpp" />
     <ClCompile Include="Render\Mesh\MeshRenderer.cpp" />
@@ -300,6 +305,12 @@
     <ClCompile Include="Render\Mesh\Primitive.cpp" />
     <ClCompile Include="Render\PerfStats.cpp" />
     <ClCompile Include="Render\PostProcess.cpp" />
+    <ClCompile Include="Render\PostProcess\Exposure.cpp" />
+    <ClCompile Include="Render\PostProcess\FXAA.cpp" />
+    <ClCompile Include="Render\PostProcess\GTAO.cpp" />
+    <ClCompile Include="Render\PostProcess\MSAA.cpp" />
+    <ClCompile Include="Render\PostProcess\TAA.cpp" />
+    <ClCompile Include="Render\PostProcess\ToneMapping.cpp" />
     <ClCompile Include="Render\Renderer.cpp" />
     <ClCompile Include="Scene\PbrScene.cpp" />
     <ClCompile Include="Scene\PhysicsDemo.cpp" />
@@ -458,15 +469,19 @@
     <ClInclude Include="Exception\DxgiInfo.h" />
     <ClInclude Include="Exception\Exception.h" />
     <ClInclude Include="Geometry\Aabb.h" />
+    <ClInclude Include="Geometry\BezierPath.h" />
+    <ClInclude Include="Geometry\BezierSpline.h" />
     <ClInclude Include="Geometry\Circle.h" />
     <ClInclude Include="Geometry\Frustum.h" />
     <ClInclude Include="Geometry\Line.h" />
     <ClInclude Include="Geometry\LineSegment.h" />
     <ClInclude Include="Geometry\Plane.h" />
+    <ClInclude Include="Geometry\Polygon.h" />
     <ClInclude Include="Geometry\Ray.h" />
     <ClInclude Include="Geometry\Rect.h" />
     <ClInclude Include="Geometry\Sector.h" />
     <ClInclude Include="Geometry\Triangle.h" />
+    <ClInclude Include="Geometry\Triangle2D.h" />
     <ClInclude Include="Input\Input.h" />
     <ClInclude Include="Input\Keyboard.h" />
     <ClInclude Include="Input\Mouse.h" />
@@ -576,6 +591,7 @@
     <ClInclude Include="Render\LightManager.h" />
     <ClInclude Include="Render\Material.h" />
     <ClInclude Include="Render\MaterialProperty.h" />
+    <ClInclude Include="Render\Mesh\BezierMesh.h" />
     <ClInclude Include="Render\Mesh\Geometry.h" />
     <ClInclude Include="Render\Mesh\Mesh.h" />
     <ClInclude Include="Render\Mesh\MeshRenderer.h" />
@@ -583,6 +599,12 @@
     <ClInclude Include="Render\Mesh\Primitive.h" />
     <ClInclude Include="Render\PerfStats.h" />
     <ClInclude Include="Render\PostProcess.h" />
+    <ClInclude Include="Render\PostProcess\Exposure.h" />
+    <ClInclude Include="Render\PostProcess\FXAA.h" />
+    <ClInclude Include="Render\PostProcess\GTAO.h" />
+    <ClInclude Include="Render\PostProcess\MSAA.h" />
+    <ClInclude Include="Render\PostProcess\TAA.h" />
+    <ClInclude Include="Render\PostProcess\ToneMapping.h" />
     <ClInclude Include="Render\Renderer.h" />
     <ClInclude Include="Scene\PbrScene.h" />
     <ClInclude Include="Scene\PhysicsDemo.h" />
